Bug 283562 - .xsession-errors should be exculded from strigin indexing
Summary: .xsession-errors should be exculded from strigin indexing
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-07 19:29 UTC by Ferdinand Gassauer
Modified: 2011-10-12 12:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ferdinand Gassauer 2011-10-07 19:29:32 UTC
Version:           unspecified (using KDE 4.7.1) 
OS:                Linux

IMHO this is a very big file and shouldn't be indexed

Reproducible: Always

Steps to Reproduce:
start strigi indexing

Actual Results:  
indexes .xession-errors

Expected Results:  
exclude .xession-errors

it consumes CPU and space - not necessary for most users
Comment 1 Ferdinand Gassauer 2011-10-10 07:10:18 UTC
IMHO it seems like an ever lasting loop (after 2 days still indexing .xession-errors) because this file gets updated all the time.
Comment 2 Sebastian Trueg 2011-10-11 19:50:24 UTC
Git commit 08a9d555d5192b8ee2606cdc3f7bbd69cc80262a by Sebastian Trueg.
Committed on 11/10/2011 at 21:06.
Pushed by trueg into branch 'KDE/4.7'.

Use new versions of the default exclude filter list.

This is achieved by using the new default exclude filter list version.
Since the KCM does not know about the version field yet (we need to
make the config class public and use it in the KCM) we re-write the
exclude filter list entry whenever it is requested and the version
does not match.
There is one problem here which I do not know how to solve yet:
if the user removed some of the default exclude filters they will be
re-added once the default list version changes. The simplest solution
would be to not let the user remove filters from the default filter
list and not even show them in the KCM.

BUG: 283562
FIXED-IN: 4.7.3

M  +10   -0    nepomuk/common/fileexcludefilters.cpp
M  +6    -0    nepomuk/common/fileexcludefilters.h
M  +18   -1    nepomuk/services/strigi/strigiserviceconfig.cpp
M  +1    -1    nepomuk/services/strigi/strigiserviceconfig.h

http://commits.kde.org/kde-runtime/08a9d555d5192b8ee2606cdc3f7bbd69cc80262a
Comment 3 Sebastian Trueg 2011-10-12 08:32:17 UTC
Git commit 64b9cead2bcdc0001e53142909cad24f853d8b87 by Sebastian Trueg.
Committed on 11/10/2011 at 21:06.
Pushed by trueg into branch 'master'.

Use new versions of the default exclude filter list.

This is achieved by using the new default exclude filter list version.
Since the KCM does not know about the version field yet (we need to
make the config class public and use it in the KCM) we re-write the
exclude filter list entry whenever it is requested and the version
does not match.
There is one problem here which I do not know how to solve yet:
if the user removed some of the default exclude filters they will be
re-added once the default list version changes. The simplest solution
would be to not let the user remove filters from the default filter
list and not even show them in the KCM.

BUG: 283562
FIXED-IN: 4.7.3

M  +10   -0    nepomuk/common/fileexcludefilters.cpp
M  +6    -0    nepomuk/common/fileexcludefilters.h
M  +18   -1    nepomuk/services/fileindexer/fileindexerconfig.cpp
M  +1    -1    nepomuk/services/fileindexer/fileindexerconfig.h

http://commits.kde.org/kde-runtime/64b9cead2bcdc0001e53142909cad24f853d8b87
Comment 4 Ferdinand Gassauer 2011-10-12 10:51:07 UTC
Thank you for looking into this.

I am not sure if your comments 2 and 3 (the same) are dedicated to programmers or users ?

me as user wouldn't know what to do..
Comment 5 Sebastian Trueg 2011-10-12 12:19:16 UTC
(In reply to comment #4)
> I am not sure if your comments 2 and 3 (the same) are dedicated to programmers
> or users ?
> 
> me as user wouldn't know what to do..

They are intended for programmers.  :)